--- a/k8s/infra/wandb-deployment.yaml
+++ b/k8s/infra/wandb-deployment.yaml
@@ -15,6 +15,7 @@ spec:
       containers:
       - name: wandb
         image: wandb/local:latest
+        imagePullPolicy: Never
         ports:
         - containerPort: 8080
         resources:
