--- a/k8s/apps/api-gateway.yaml
+++ b/k8s/apps/api-gateway.yaml
@@ -21,6 +21,16 @@ spec:
           env:
             - name: PORT
               value: "8080"
+            - name: APP_NAME
+              value: "API-GATEWAY"
+            - name: POD_IP
+              valueFrom:
+                fieldRef:
+                  fieldPath: status.podIP
+            - name: HOSTNAME
+              valueFrom:
+                fieldRef:
+                  fieldPath: metadata.name
             - name: EUREKA_SERVER_URL
               value: "http://discovery-server:8761/eureka"
             - name: FLASK_APP_NAME
