--- a/api-gateway/Dockerfile
+++ b/api-gateway/Dockerfile
@@ -8,13 +8,14 @@ RUN go mod download
 COPY . .
 RUN CGO_ENABLED=0 GOOS=linux GOARCH=amd64 go build -trimpath -ldflags="-s -w" -o /out/api-gateway .
 
-FROM gcr.io/distroless/static:nonroot
+FROM alpine:latest
 
 WORKDIR /
 COPY --from=build /out/api-gateway /api-gateway
 
+RUN apk --no-cache add curl
+
 EXPOSE 8080
-USER nonroot:nonroot
 
 ENTRYPOINT ["/api-gateway"]
 
