--- a/docker-compose.local.yml
+++ b/docker-compose.local.yml
@@ -1,5 +1,3 @@
-version: '3.8'
-
 services:
   # Discovery Server (Eureka)
   discovery-server:
@@ -40,7 +38,7 @@ services:
       discovery-server:
         condition: service_healthy
     healthcheck:
-      test: ["CMD", "wget", "--quiet", "--tries=1", "--spider", "http://localhost:5000/"]
+      test: ["CMD", "curl", "-f", "http://localhost:5000/"]
       interval: 10s
       timeout: 5s
       retries: 5
@@ -68,7 +66,7 @@ services:
       flask-service:
         condition: service_healthy
     healthcheck:
-      test: ["CMD", "wget", "--quiet", "--tries=1", "--spider", "http://localhost:8080/health"]
+      test: ["CMD", "curl", "-f", "http://localhost:8080/health"]
       interval: 10s
       timeout: 5s
       retries: 5
