--- a/.github/workflows/docker-ci.yml
+++ b/.github/workflows/docker-ci.yml
@@ -9,6 +9,7 @@ on:
       - 'api-gateway/**'
       - 'discovery-server/**'
       - 'test/**'
+      - 'front-end/**'
       - '.github/workflows/docker-ci.yml'
 
 env:
@@ -22,6 +23,7 @@ jobs:
       api-gateway: ${{ steps.filter.outputs.api-gateway }}
       discovery-server: ${{ steps.filter.outputs.discovery-server }}
       flask-api: ${{ steps.filter.outputs.flask-api }}
+      front-end: ${{ steps.filter.outputs.front-end }}
     steps:
       - name: Checkout
         uses: actions/checkout@v4
@@ -39,6 +41,8 @@ jobs:
               - 'discovery-server/**'
             flask-api:
               - 'test/**'
+            front-end:
+              - 'front-end/**'
 
   # Build and push API Gateway
   build-api-gateway:
@@ -133,6 +137,38 @@ jobs:
           tags: |
             ${{ env.DOCKER_REPO }}:flask-api-latest
             ${{ env.DOCKER_REPO }}:flask-api-${{ github.sha }}
+          cache-from: type=gha
+          cache-to: type=gha,mode=max
+
+  # Build and push Front End
+  build-front-end:
+    needs: detect-changes
+    if: needs.detect-changes.outputs.front-end == 'true'
+    runs-on: ubuntu-latest
+    permissions:
+      contents: read
+
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v4
+
+      - name: Log in to Docker Hub
+        uses: docker/login-action@v3
+        with:
+          username: ${{ secrets.DOCKERHUB_USERNAME }}
+          password: ${{ secrets.DOCKERHUB_TOKEN }}
+
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v3
+
+      - name: Build and push front-end image
+        uses: docker/build-push-action@v6
+        with:
+          context: ./front-end
+          push: true
+          tags: |
+            ${{ env.DOCKER_REPO }}:front-end-latest
+            ${{ env.DOCKER_REPO }}:front-end-${{ github.sha }}
           cache-from: type=gha
           cache-to: type=gha,mode=max
 
