--- a/k8s/apps/api-gateway.yaml
+++ b/k8s/apps/api-gateway.yaml
@@ -37,6 +37,8 @@ spec:
               value: "FLASK-SERVICE"
             - name: FLASK_BASE_URL
               value: "http://flask-service"
+            - name: REQUEST_TIMEOUT
+              value: "120s"
           resources:
             requests:
               cpu: "100m"
