--- a/agent-service/Dockerfile
+++ b/agent-service/Dockerfile
@@ -9,8 +9,8 @@ RUN pip install --no-cache-dir -r requirements.txt && \
     rm -rf /var/lib/apt/lists/*
 
 
-COPY app.py .
+COPY . .
 
 EXPOSE 5000
 
-CMD ["python", "app.py"]
+CMD ["python", "-m", "app.main"]
