--- a/.github/workflows/docker-ci.yml
+++ b/.github/workflows/docker-ci.yml
@@ -10,6 +10,7 @@ on:
       - 'discovery-server/**'
       - 'agent-service/**'
       - 'front-end/**'
+      - 'mcp-chrome/**'
       - '.github/workflows/docker-ci.yml'
 
 env:
@@ -24,6 +25,7 @@ jobs:
       discovery-server: ${{ steps.filter.outputs.discovery-server }}
       agent-service: ${{ steps.filter.outputs.agent-service }}
       front-end: ${{ steps.filter.outputs.front-end }}
+      chrome-mcp: ${{ steps.filter.outputs.chrome-mcp }}
     steps:
       - name: Checkout
         uses: actions/checkout@v4
@@ -43,6 +45,8 @@ jobs:
               - 'agent-service/**'
             front-end:
               - 'front-end/**'
+            chrome-mcp:
+              - 'mcp-chrome/**'
 
   # Build and push API Gateway
   build-api-gateway:
@@ -169,6 +173,38 @@ jobs:
           tags: |
             ${{ env.DOCKER_REPO }}:front-end-latest
             ${{ env.DOCKER_REPO }}:front-end-${{ github.sha }}
+          cache-from: type=gha
+          cache-to: type=gha,mode=max
+
+  # Build and push Chrome MCP bridge
+  build-chrome-mcp:
+    needs: detect-changes
+    if: needs.detect-changes.outputs.chrome-mcp == 'true'
+    runs-on: ubuntu-latest
+    permissions:
+      contents: read
+
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v4
+
+      - name: Log in to Docker Hub
+        uses: docker/login-action@v3
+        with:
+          username: ${{ secrets.DOCKERHUB_USERNAME }}
+          password: ${{ secrets.DOCKERHUB_TOKEN }}
+
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v3
+
+      - name: Build and push chrome-mcp image
+        uses: docker/build-push-action@v6
+        with:
+          context: ./mcp-chrome
+          push: true
+          tags: |
+            ${{ env.DOCKER_REPO }}:chrome-mcp-latest
+            ${{ env.DOCKER_REPO }}:chrome-mcp-${{ github.sha }}
           cache-from: type=gha
           cache-to: type=gha,mode=max
 
