--- a/k8s/apps/agent-service.yaml
+++ b/k8s/apps/agent-service.yaml
@@ -26,51 +26,23 @@ spec:
         ports:
         - containerPort: 5000
         env:
-        - name: AGENT1
+        - name: LLM_API_KEY
           valueFrom:
             secretKeyRef:
               name: agent-service-secrets
-              key: AGENT1
-        - name: AGENT1_PROVIDER
+              key: LLM_API_KEY
+        - name: LLM_PROVIDER
           value: "gemini"
-        - name: AGENT1_BASE_URL
+        - name: LLM_BASE_URL
           value: "https://generativelanguage.googleapis.com/v1beta"
-        - name: AGENT1_MODEL
+        - name: LLM_MODEL
           value: "gemini-2.5-flash"
-        - name: AGENT2
-          valueFrom:
-            secretKeyRef:
-              name: agent-service-secrets
-              key: AGENT2
-        - name: AGENT2_PROVIDER
-          value: "gemini"
-        - name: AGENT2_BASE_URL
-          value: "https://generativelanguage.googleapis.com/v1beta"
-        - name: AGENT2_MODEL
-          value: "gemini-2.0-flash"
-        - name: AGENT3
-          valueFrom:
-            secretKeyRef:
-              name: agent-service-secrets
-              key: AGENT3
-        - name: AGENT3_PROVIDER
-          value: "gemini"
-        - name: AGENT3_BASE_URL
-          value: "https://generativelanguage.googleapis.com/v1beta"
-        - name: AGENT3_MODEL
-          value: "gemini-2.5-flash"
-        - name: CHROMA_HOST
-          value: "chromadb-service"
-        - name: CHROMA_PORT
-          value: "8000"
         - name: EUREKA_SERVER_URL
           value: "http://discovery-server:8761"
         - name: EUREKA_APP_NAME
           value: "AGENT-SERVICE"
         - name: CHROME_MCP_URL
-          value: "http://chrome-mcp:8000"
-        - name: CHROME_MCP_TOOL
-          value: "new_page"
+          value: "http://chrome-mcp:8000/mcp"
 ---
 apiVersion: v1
 kind: Service
